--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,9 +4,26 @@ import Button from '../components/Button.astro';
 import Link from '../components/Link.astro';
 ---
 <MainLayout title="Titel">
-	<article>
-		<h1>Index overskrift</h1>
-		<Button>Klik!</Button>
-		<p>Link til <Link href="https://www.kea.dk" target="_blank">En anden side</Link></p>
-	</article>
+	<section class="lg:grid lg:grid-cols-5 lg:grid-rows-5 ">
+		
+		<img src="himmel.webp" class="lg:col-start-1 lg:col-span-5 lg:row-start-1 lg:row-span-5 z-0">
+		<img src="byen.webp" class="lg:col-start-1 lg:col-span-5 lg:row-start-1 lg:row-span-5 z-10">
+		<img src="helikopter.webp" class="lg:col-start-4 lg:col-span-2 lg:row-start-2 lg:row-span-2 vibrate-3 z-5">
+		
+		<div class="lg:col-start-2 lg:col-span-2 lg:row-start-4 lg:row-span-2 z-20">
+			<h1 class="text-7xl bg-white inline">Natos luftrum</h1><br>
+			<p class="text-3xl bg-white inline">Luftrummet over Nato er flot, blåt - og fuld af forurening! Nu patruljerer en helikopter permanent over New York, og det gør det ikke bedre...</p>
+		</div>
+	</section>
+	<section class="max-w-2xl mx-auto py-8">
+		<h2 class="text-3xl py-4">Lorem ipsum</h2>
+		<p class="py-4">
+		Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda animi nesciunt doloribus odio possimus aliquam nihil iure quaerat repudiandae voluptate labore dignissimos eligendi molestiae pariatur numquam saepe, ratione voluptas deserunt?
+		</p>
+		<h2 class="text-3xl py-4">Lorem ipsum</h2>
+		<p class="py-4">
+		Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda animi nesciunt doloribus odio possimus aliquam nihil iure quaerat repudiandae voluptate labore dignissimos eligendi molestiae pariatur numquam saepe, ratione voluptas deserunt?
+		</p>
+	</section>
+
 </MainLayout>
