justerer på grid

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,13 +4,13 @@ import Button from '../components/Button.astro';
 import Link from '../components/Link.astro';
 ---
 <MainLayout title="Titel">
-	<section class="lg:grid lg:grid-cols-5 lg:grid-rows-5 ">
+	<section class="grid grid-cols-5 grid-rows-5 ">
 		
-		<img src="himmel.webp" class="lg:col-start-1 lg:col-span-5 lg:row-start-1 lg:row-span-5 z-0">
-		<img src="byen.webp" class="lg:col-start-1 lg:col-span-5 lg:row-start-1 lg:row-span-5 z-10">
-		<img src="helikopter.webp" class="lg:col-start-4 lg:col-span-2 lg:row-start-2 lg:row-span-2 vibrate-3 z-5">
+		<img src="himmel.webp" class="col-start-1 col-span-5 row-start-1 row-span-5 z-0">
+		<img src="byen.webp" class="col-start-1 col-span-5 row-start-1 row-span-5 z-10">
+		<img src="helikopter.webp" class="col-start-4 col-span-2 row-start-2 row-span-2 vibrate-3 z-5">
 		
-		<div class="lg:col-start-2 lg:col-span-2 lg:row-start-4 lg:row-span-2 z-20">
+		<div class="col-span-5 lg:col-start-2 lg:col-span-2 lg:row-start-4 lg:row-span-2 z-20">
 			<h1 class="text-7xl bg-white inline">Natos luftrum</h1><br>
 			<p class="text-3xl bg-white inline">Luftrummet over Nato er flot, blåt - og fuld af forurening! Nu patruljerer en helikopter permanent over New York, og det gør det ikke bedre...</p>
 		</div>
